# Synnefo

./: AUTHORS.md  CMakeLists.txt  COPYING.md  Makefile  README  README.md  SynnefoBuildTreeSettings.cmake.in  SynnefoConfig.cmake.in  SynnefoConfigVersion.cmake.in  main.cpp  syfoMain.ui  synnefo.1  synnefo.cpp  synnefo.desktop  synnefo.h  synnefo.pro  synnefo.qrc
cmake/: CMakeLists.txt  SynnefoConfig.cmake.in  cmake_uninstall.cmake.in
extras/debian/: changelog  control  copyright  libsynnefo-dev.dirs  libsynnefo-dev.install  synnefo.install
src/: CMakeLists.txt  main.cpp  synnefo.cpp  synnefo.h
src/app/: CMakeLists.txt  main.cpp  synnefo.cpp  synnefo.h
src/app/extras/: oyranos-config-synnefo-qt4.desktop  oyranos-config-synnefo.1  oyranos-config-synnefo.desktop
src/app/extras/osx/: Synnefo.sh.in
src/app/ui/: resources.qrc  synnefo.ui
src/classes/: syconfig.cpp  syconfig.h
src/modules/: CMakeLists.txt  symodule.cpp  symodule.h  symoduleconfig.cpp  symoduleconfig.h  symoduleconfig.ui
src/modules/database/: sy_database.cpp  sy_database.h  sy_database_config.cpp  sy_database_config.h
src/modules/database/ui/: sy_database.ui  sy_database_config.ui
src/modules/devices/: icons.qrc  sy_devices.cpp  sy_devices.h  sy_devices.ui  sy_devices_config.cpp  sy_devices_config.h  sy_devices_config.ui  sy_devices_item.cpp  sy_devices_item.h
src/modules/devices/ui/: sy_devices.ui  sy_devices_config.ui
src/modules/information/: icons.qrc  syInfoDialog.ui  sy_info.cpp  sy_info.h  sy_info.ui  sy_info_config.cpp  sy_info_config.h  sy_info_config.ui  sy_info_dialog.cpp  sy_info_dialog.h  sy_info_dialog.ui
src/modules/information/ui/: sy_info.ui  sy_info_dialog.ui
src/modules/settings/: sy_settings.cpp  sy_settings.h  sy_settings_config.cpp  sy_settings_config.h  sy_settings_config.ui
src/modules/settings/ui/: sy_settings.ui
src/ui/: synnefo-config.ui  synnefo.ui
